[gd_scene load_steps=33 format=2]

[ext_resource path="res://Scenes/Characters/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menus/PauseMenu/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/logo-inteli.png" type="Texture" id=3]
[ext_resource path="res://Assets/tecla_e.png" type="Texture" id=4]
[ext_resource path="res://Assets/teclaroxaesq (2).png" type="Texture" id=5]
[ext_resource path="res://Scenes/Globals/Popup_tecla_E.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/backgroundSky.jpg" type="Texture" id=7]
[ext_resource path="res://Scenes/Levels/City/City.gd" type="Script" id=8]
[ext_resource path="res://Assets/Tile_72.png" type="Texture" id=9]
[ext_resource path="res://Assets/Tile_55.png" type="Texture" id=10]
[ext_resource path="res://Assets/Tile_69.png" type="Texture" id=11]
[ext_resource path="res://Assets/Tile_71.png" type="Texture" id=12]
[ext_resource path="res://Assets/PREDIODOLADO-removebg-preview.png" type="Texture" id=13]
[ext_resource path="res://Assets/2.png" type="Texture" id=14]
[ext_resource path="res://Assets/flashcard_frente.png" type="Texture" id=15]
[ext_resource path="res://Assets/Tile_03.png" type="Texture" id=16]
[ext_resource path="res://Assets/Tile_66.png" type="Texture" id=17]
[ext_resource path="res://Assets/3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Tile_70.png" type="Texture" id=19]
[ext_resource path="res://Assets/prediopixell.png" type="Texture" id=20]
[ext_resource path="res://Assets/Poste.png" type="Texture" id=21]
[ext_resource path="res://Assets/Arvore Fora do Predio.png" type="Texture" id=22]
[ext_resource path="res://Assets/Medal_Ouro.png" type="Texture" id=23]
[ext_resource path="res://Assets/Tile_02.png" type="Texture" id=24]
[ext_resource path="res://Assets/Tile_01.png" type="Texture" id=25]
[ext_resource path="res://Assets/interaçãolabel-removebg-preview.png" type="Texture" id=26]
[ext_resource path="res://Assets/teclaroxadir (2).png" type="Texture" id=27]
[ext_resource path="res://Assets/movimentaçãolabel-removebg-preview.png" type="Texture" id=28]

[sub_resource type="TileSet" id=1]
0/name = "01"
0/texture = ExtResource( 25 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "02"
1/texture = ExtResource( 24 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "03"
2/texture = ExtResource( 16 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Tile_55.png 3"
3/texture = ExtResource( 10 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Tile_71.png 4"
4/texture = ExtResource( 12 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Tile_72.png 5"
5/texture = ExtResource( 9 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Tile_70.png 6"
6/texture = ExtResource( 19 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Tile_69.png 7"
7/texture = ExtResource( 11 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Tile_66.png 8"
8/texture = ExtResource( 17 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 99, -139 )
b = Vector2( 93, 574 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 1646, 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 56.75, 48.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="BackgroundAssets" type="TileMap" parent="."]
format = 1

[node name="BackgroundCitySky" type="Sprite" parent="BackgroundAssets"]
position = Vector2( 652, 202 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="BackgroundLayer1" type="Sprite" parent="BackgroundAssets"]
position = Vector2( 749, 303 )
scale = Vector2( 2.40972, 2.37037 )
texture = ExtResource( 18 )

[node name="BackgroundLayer2" type="Sprite" parent="BackgroundAssets"]
position = Vector2( 854, 286 )
scale = Vector2( 2.98264, 2.91512 )
texture = ExtResource( 14 )

[node name="PredioVizinho" type="Sprite" parent="."]
position = Vector2( 952, 292 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 13 )
offset = Vector2( -142.92, 127.578 )

[node name="PredioVizinho2" type="Sprite" parent="."]
position = Vector2( 689, 289 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 13 )
offset = Vector2( -142.92, 127.578 )

[node name="PredioDell" type="Sprite" parent="."]
position = Vector2( 705, 307 )
texture = ExtResource( 20 )

[node name="Logo-inteli" type="Sprite" parent="PredioDell"]
position = Vector2( 2.82532, -3.03615 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="ArvoreForaDoPredio2" type="Sprite" parent="."]
position = Vector2( 1254, 348 )
texture = ExtResource( 22 )
offset = Vector2( -51, 44 )

[node name="ArvoreForaDoPredio4" type="Sprite" parent="."]
position = Vector2( 280, 352 )
texture = ExtResource( 22 )
offset = Vector2( -51, 44 )

[node name="ArvoreForaDoPredio3" type="Sprite" parent="."]
position = Vector2( 1143, 316 )
texture = ExtResource( 22 )
offset = Vector2( -51, 44 )

[node name="ArvoreForaDoPredio" type="Sprite" parent="."]
position = Vector2( 484, 316 )
texture = ExtResource( 22 )
offset = Vector2( -51, 44 )

[node name="ArvoreForaDoPredio5" type="Sprite" parent="."]
position = Vector2( 121, 320 )
texture = ExtResource( 22 )
offset = Vector2( -51, 44 )

[node name="Poste" type="Sprite" parent="."]
position = Vector2( 53.0003, 434 )
scale = Vector2( 1.13825, 1.13461 )
texture = ExtResource( 21 )

[node name="Poste2" type="Sprite" parent="."]
position = Vector2( 443, 433 )
scale = Vector2( 1.13825, 1.13461 )
texture = ExtResource( 21 )

[node name="Poste3" type="Sprite" parent="."]
position = Vector2( 949, 432 )
scale = Vector2( 1.13825, 1.13461 )
texture = ExtResource( 21 )

[node name="Poste4" type="Sprite" parent="."]
position = Vector2( 1276, 432 )
scale = Vector2( 1.13825, 1.13461 )
texture = ExtResource( 21 )

[node name="Floor" type="TileMap" parent="."]
position = Vector2( 5, 105 )
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 983039, 0, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 917534, 1, 0, 917535, 1, 0, 917536, 1, 0, 917537, 1, 0, 917538, 1, 0, 917539, 1, 0, 917540, 1, 0, 917541, 1, 0, 917542, 1, 0, 917543, 536870913, 0, 917544, 536870913, 0, 917545, 536870913, 0, 917546, 536870913, 0, 917547, 536870913, 0, 917548, 536870913, 0, 917549, 536870913, 0, 917550, 536870913, 0, 917551, 536870913, 0, 917552, 536870913, 0, 917553, 536870913, 0, 917554, 536870913, 0, 917555, 536870913, 0, 917556, 536870913, 0, 917557, 536870913, 0, 917558, 536870913, 0, 917559, 536870912, 0, 1048575, 536870920, 0, 983040, 1073741832, 0, 983041, 1073741832, 0, 983042, 1073741832, 0, 983043, 1073741832, 0, 983044, 1073741832, 0, 983045, 1073741832, 0, 983046, 1073741832, 0, 983047, 1073741832, 0, 983048, -1610612728, 0, 983049, -1610612728, 0, 983050, -1610612728, 0, 983051, -1610612728, 0, 983052, -1610612728, 0, 983053, -1610612728, 0, 983054, -1610612728, 0, 983055, -1610612728, 0, 983056, -1610612728, 0, 983057, -1610612728, 0, 983058, -1610612728, 0, 983059, -1610612728, 0, 983060, -1610612728, 0, 983061, -1610612728, 0, 983062, -1610612728, 0, 983063, -1610612728, 0, 983064, -1610612728, 0, 983065, -1610612728, 0, 983066, -1610612728, 0, 983067, -1610612728, 0, 983068, -1610612728, 0, 983069, -1610612728, 0, 983070, -1610612728, 0, 983071, 1073741832, 0, 983072, 1073741832, 0, 983073, -1610612728, 0, 983074, -1610612728, 0, 983075, -1610612728, 0, 983076, -1610612728, 0, 983077, -1610612728, 0, 983078, -1610612728, 0, 983079, -1610612728, 0, 983080, -1610612728, 0, 983081, -1610612728, 0, 983082, -1610612728, 0, 983083, -1610612728, 0, 983084, -1610612728, 0, 983085, -1610612728, 0, 983086, -1610612728, 0, 983087, -1610612728, 0, 983088, -1610612728, 0, 983089, -1610612728, 0, 983090, -1610612728, 0, 983091, -1610612728, 0, 983092, -1610612728, 0, 983093, -1610612728, 0, 983094, 1073741832, 0, 983095, 8, 0, 1114111, 536870918, 0, 1048576, -2147483640, 0, 1048577, -2147483640, 0, 1048578, -2147483640, 0, 1048579, -2147483640, 0, 1048580, -2147483640, 0, 1048581, -2147483640, 0, 1048582, -2147483640, 0, 1048583, -2147483640, 0, 1048584, -2147483640, 0, 1048585, -2147483640, 0, 1048586, -2147483640, 0, 1048587, -2147483640, 0, 1048588, -2147483640, 0, 1048589, -2147483640, 0, 1048590, -2147483640, 0, 1048591, -1610612728, 0, 1048592, -1610612728, 0, 1048593, -1610612728, 0, 1048594, -1610612728, 0, 1048595, -1610612728, 0, 1048596, -1610612728, 0, 1048597, -2147483640, 0, 1048598, -2147483640, 0, 1048599, -1610612728, 0, 1048600, -1610612728, 0, 1048601, -1610612728, 0, 1048602, -1610612728, 0, 1048603, -1610612728, 0, 1048604, -1610612728, 0, 1048605, -1610612728, 0, 1048606, -2147483640, 0, 1048607, -2147483640, 0, 1048608, -2147483640, 0, 1048609, -1610612728, 0, 1048610, -1610612728, 0, 1048611, -1610612728, 0, 1048612, -1610612728, 0, 1048613, -1610612728, 0, 1048614, -1610612728, 0, 1048615, -1610612728, 0, 1048616, -1610612728, 0, 1048617, -1610612728, 0, 1048618, -1610612728, 0, 1048619, -1610612728, 0, 1048620, -1610612728, 0, 1048621, -1610612728, 0, 1048622, -1610612728, 0, 1048623, -1610612728, 0, 1048624, -1610612728, 0, 1048625, -1610612728, 0, 1048626, -1610612728, 0, 1048627, -1610612728, 0, 1048628, -1610612728, 0, 1048629, -1610612728, 0, 1048630, -1610612728, 0, 1048631, 536870919, 0 )

[node name="LimiteTelaEsquerda" type="StaticBody2D" parent="."]

[node name="CollisionShapeEsquerda" type="CollisionShape2D" parent="LimiteTelaEsquerda"]
position = Vector2( -97, 8 )
shape = SubResource( 2 )

[node name="LimiteTelaDireita" type="StaticBody2D" parent="."]
position = Vector2( -12, -75 )

[node name="CollisionShapeDireita" type="CollisionShape2D" parent="LimiteTelaDireita"]
position = Vector2( 1185, 61 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -26, 442 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -8, 104 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 4, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 693, 501 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Area2D"]

[node name="Popup_tecla_E" parent="Area2D" instance=ExtResource( 6 )]
margin_left = 676.0
margin_top = 402.0
margin_right = 713.0
margin_bottom = 439.0

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 171, 549 )
scale = Vector2( 0.8, 0.8 )

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Botoes" type="ColorRect" parent="."]
margin_left = -73.0
margin_top = 361.0
margin_right = -33.0
margin_bottom = 401.0
color = Color( 1, 1, 1, 0 )

[node name="Teclaroxaesq(2)" type="Sprite" parent="Botoes"]
position = Vector2( 124.812, 216.187 )
scale = Vector2( 0.165417, 0.171343 )
texture = ExtResource( 5 )

[node name="Teclaroxadir(2)" type="Sprite" parent="Botoes"]
position = Vector2( 195.703, 215.219 )
scale = Vector2( 0.107876, 0.102622 )
texture = ExtResource( 27 )

[node name="ColorRect" type="ColorRect" parent="Botoes"]
margin_left = 88.0
margin_top = 241.0
margin_right = 241.0
margin_bottom = 271.0
color = Color( 0.247059, 0, 0.701961, 1 )

[node name="Movimentaçãolabel-removebg-preview" type="Sprite" parent="Botoes/ColorRect"]
position = Vector2( 75, 17 )
scale = Vector2( 0.166856, 0.228261 )
texture = ExtResource( 28 )

[node name="ColorRect2" type="ColorRect" parent="Botoes"]
margin_left = 266.0
margin_top = 240.0
margin_right = 418.0
margin_bottom = 276.0
color = Color( 0.247059, 0, 0.701961, 1 )

[node name="Interaçãolabel-removebg-preview" type="Sprite" parent="Botoes/ColorRect2"]
position = Vector2( 76, 18 )
scale = Vector2( 0.192956, 0.21656 )
texture = ExtResource( 26 )

[node name="TeclaE" type="Sprite" parent="Botoes"]
position = Vector2( 338.25, 214 )
scale = Vector2( 3.29167, 2.83333 )
texture = ExtResource( 4 )

[node name="FlashcardFrente" type="Sprite" parent="."]
visible = false
position = Vector2( 660, 307 )
texture = ExtResource( 15 )

[node name="MedalOuro" type="Sprite" parent="FlashcardFrente"]
position = Vector2( 1, 70 )
texture = ExtResource( 23 )

[node name="Label" type="Label" parent="FlashcardFrente"]
margin_left = -154.0
margin_top = -110.0
margin_right = -9.0
margin_bottom = -96.0
rect_scale = Vector2( 2, 2 )
text = "Bem vindo(a) ao Inteli!"

[node name="Label2" type="Label" parent="FlashcardFrente"]
margin_left = -265.0
margin_top = -68.0
margin_right = 92.0
margin_bottom = -3.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Você se esforçou muito até aqui e conseguiu! Parabéns!
Estamos anciosos para te receber. Fique de olho em 
seu email, pois entraremos em contato com mais
informações em breve!"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
